--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -1,7 +1,7 @@
 $no-columns-breakpoint: 600px;
 
 code {
-  font-family: $font-monospace, monospace;
+  font-family: 'Sawarabi Mincho', serif, $font-monospace, monospace;
   font-weight: 400;
 }
 
@@ -488,7 +488,7 @@ code {
     width: 100%;
     border: none;
     padding: 10px;
-    font-family: $font-monospace, monospace;
+    font-family: 'Sawarabi Mincho', serif, $font-monospace, monospace;
     background: $ui-base-color;
     color: $primary-text-color;
     font-size: 14px;
@@ -732,7 +732,7 @@ code {
 .form_admin_settings_custom_css,
 .form_admin_settings_closed_registrations_message {
   textarea {
-    font-family: $font-monospace, monospace;
+    font-family: 'Sawarabi Mincho', serif, $font-monospace, monospace;
   }
 }
 
@@ -756,7 +756,7 @@ code {
     border: 0;
     padding: 10px;
     font-size: 14px;
-    font-family: $font-monospace, monospace;
+    font-family: 'Sawarabi Mincho', serif, $font-monospace, monospace;
   }
 
   button {
