--- a/app/views/admin/domain_blocks/index.html.haml
+++ b/app/views/admin/domain_blocks/index.html.haml
@@ -1,6 +1,8 @@
 - content_for :page_title do
   = t('admin.domain_blocks.title')
 
+= link_to t('admin.domain_blocks.add_new'), new_admin_domain_block_path, class: 'button'
+
 .table-wrapper
   %table.table
     %thead
