Customized for Taketodon

--- a/app/javascript/styles/mastodon/accounts.scss
+++ b/app/javascript/styles/mastodon/accounts.scss
@@ -170,7 +170,7 @@
       font-weight: 500;
       font-size: 18px;
       color: $primary-text-color;
-      font-family: 'mastodon-font-display', sans-serif;
+      font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     }
   }
 
