--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'mastodon-font-sans-serif', sans-serif;
+  font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
   background: $ui-base-color;
   background-size: cover;
   background-attachment: fixed;
@@ -93,7 +93,6 @@ body {
         max-width: 470px;
         width: 100%;
         height: auto;
-        margin-top: -120px;
       }
 
       h1 {
