--- a/app/javascript/styles/mastodon/about.scss
+++ b/app/javascript/styles/mastodon/about.scss
@@ -180,7 +180,7 @@ $small-breakpoint: 960px;
 
   p,
   li {
-    font-family: 'mastodon-font-sans-serif', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
     font-size: 16px;
     font-weight: 400;
     font-size: 16px;
@@ -229,7 +229,7 @@ $small-breakpoint: 960px;
   }
 
   h1 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 26px;
     line-height: 30px;
     font-weight: 500;
@@ -237,7 +237,7 @@ $small-breakpoint: 960px;
     color: $secondary-text-color;
 
     small {
-      font-family: 'mastodon-font-sans-serif', sans-serif;
+      font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
       display: block;
       font-size: 18px;
       font-weight: 400;
@@ -246,7 +246,7 @@ $small-breakpoint: 960px;
   }
 
   h2 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 22px;
     line-height: 26px;
     font-weight: 500;
@@ -255,7 +255,7 @@ $small-breakpoint: 960px;
   }
 
   h3 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 18px;
     line-height: 24px;
     font-weight: 500;
@@ -264,7 +264,7 @@ $small-breakpoint: 960px;
   }
 
   h4 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 16px;
     line-height: 24px;
     font-weight: 500;
@@ -273,7 +273,7 @@ $small-breakpoint: 960px;
   }
 
   h5 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 14px;
     line-height: 24px;
     font-weight: 500;
@@ -282,7 +282,7 @@ $small-breakpoint: 960px;
   }
 
   h6 {
-    font-family: 'mastodon-font-display', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
     font-size: 12px;
     line-height: 24px;
     font-weight: 500;
@@ -349,7 +349,7 @@ $small-breakpoint: 960px;
 
       .hero .heading {
         padding-bottom: 20px;
-        font-family: 'mastodon-font-sans-serif', sans-serif;
+        font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
         font-size: 16px;
         font-weight: 400;
         font-size: 16px;
@@ -400,7 +400,7 @@ $small-breakpoint: 960px;
         text-decoration: none;
         padding: 12px 16px;
         line-height: 32px;
-        font-family: 'mastodon-font-display', sans-serif;
+        font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
         font-weight: 500;
         font-size: 14px;
 
@@ -473,7 +473,7 @@ $small-breakpoint: 960px;
   .about-short {
     background: darken($ui-base-color, 4%);
     padding: 50px 0 30px;
-    font-family: 'mastodon-font-sans-serif', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
     font-size: 16px;
     font-weight: 400;
     font-size: 16px;
@@ -503,7 +503,7 @@ $small-breakpoint: 960px;
 
     &__section {
       flex: 1 0 0;
-      font-family: 'mastodon-font-sans-serif', sans-serif;
+      font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
       font-size: 16px;
       line-height: 28px;
       color: $primary-text-color;
@@ -544,7 +544,7 @@ $small-breakpoint: 960px;
       bottom: -40px;
 
       .panel-header {
-        font-family: 'mastodon-font-display', sans-serif;
+        font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
         font-size: 14px;
         line-height: 24px;
         font-weight: 500;
@@ -964,7 +964,7 @@ $small-breakpoint: 960px;
 
   .extended-description {
     padding: 50px 0;
-    font-family: 'mastodon-font-sans-serif', sans-serif;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
     font-size: 16px;
     font-weight: 400;
     font-size: 16px;
