Customized for Taketodon

--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: 'mastodon-font-sans-serif', sans-serif;
+  font-family: 'Sawarabi Mincho', serif, 'mastodon-font-sans-serif', sans-serif;
   background: darken($ui-base-color, 8%);
   font-size: 13px;
   line-height: 18px;
