--- a/app/javascript/styles/mastodon/admin.scss
+++ b/app/javascript/styles/mastodon/admin.scss
@@ -434,7 +434,7 @@
     border-radius: 0 0 4px 4px;
     padding: 10px;
     color: $darker-text-color;
-    font-family: 'mastodon-font-monospace', monospace;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-monospace', monospace;
     font-size: 12px;
     word-wrap: break-word;
     min-height: 20px;
