--- a/app/javascript/styles/mastodon/containers.scss
+++ b/app/javascript/styles/mastodon/containers.scss
@@ -11,7 +11,7 @@
 
 .logo-container {
   margin: 100px auto;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 
   @media screen and (max-width: 400px) {
     margin: 30px auto;
@@ -24,7 +24,8 @@
     align-items: center;
 
     img {
-      height: 42px;
+      height: 100px;
+      width: 100px;
       margin-right: 10px;
     }
 
@@ -37,7 +38,7 @@
       outline: 0;
       padding: 12px 16px;
       line-height: 32px;
-      font-family: 'mastodon-font-display', sans-serif;
+      font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
       font-weight: 500;
       font-size: 14px;
     }
@@ -627,7 +628,7 @@
             font-size: 18px;
             margin-bottom: 5px;
             color: $primary-text-color;
-            font-family: 'mastodon-font-display', sans-serif;
+            font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
           }
         }
 
