--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -1,5 +1,5 @@
 code {
-  font-family: 'mastodon-font-monospace', monospace;
+  font-family: 'Sawarabi Mincho', serif, 'mastodon-font-monospace', monospace;
   font-weight: 400;
 }
 
@@ -409,7 +409,7 @@ code {
     width: 100%;
     border: none;
     padding: 10px;
-    font-family: 'mastodon-font-monospace', monospace;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-monospace', monospace;
     background: $ui-base-color;
     color: $primary-text-color;
     font-size: 14px;
@@ -629,6 +629,6 @@ code {
 .form_admin_settings_custom_css,
 .form_admin_settings_closed_registrations_message {
   textarea {
-    font-family: 'mastodon-font-monospace', monospace;
+    font-family: 'Sawarabi Mincho', serif, 'mastodon-font-monospace', monospace;
   }
 }
