Customized for Taketodon

--- a/app/javascript/styles/mastodon/tables.scss
+++ b/app/javascript/styles/mastodon/tables.scss
@@ -60,7 +60,7 @@
 }
 
 samp {
-  font-family: 'mastodon-font-monospace', monospace;
+  font-family: 'Sawarabi Mincho', serif, monospace;
 }
 
 a.table-action-link {
