Fix font family

--- a/app/javascript/styles/mastodon/containers.scss
+++ b/app/javascript/styles/mastodon/containers.scss
@@ -628,7 +628,7 @@
             font-size: 18px;
             margin-bottom: 5px;
             color: $primary-text-color;
-            font-family: 'mastodon-font-display', sans-serif;
+            font-family: 'Sawarabi Mincho', serif, 'mastodon-font-display', sans-serif;
           }
         }
 
