--- a/app/javascript/styles/custom/variables.scss
+++ b/app/javascript/styles/custom/variables.scss
@@ -49,6 +49,10 @@ $media-modal-media-max-height: 80%;
 
 $no-gap-breakpoint: 415px;
 
+$font-sans-serif: 'mastodon-font-sans-serif' !default;
+$font-display: 'mastodon-font-display' !default;
+$font-monospace: 'mastodon-font-monospace' !default;
+
 // Custom
 $breakpoint-mobile: 630px;
 @mixin max-screen($break-point) {
